SET(LOGLIB_SRC Slog.cc)
ADD_LIBRARY(Slog_static STATIC ${LOGLIB_SRC})
SET_TARGET_PROPERTIES(Slog_static PROPERTIES OUTPUT_NAME "Slog")
# cmake 在构建一个新的target 时，会尝试清理掉其他使用这个名字的库，如果没有清理还是会只会构建一个动态库，不会构建出静态库
SET_TARGET_PROPERTIES(Slog_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)

ADD_LIBRARY(Slog SHARED ${LOGLIB_SRC})
SET_TARGET_PROPERTIES(Slog PROPERTIES  OUTPUT_NAME "Slog")
SET_TARGET_PROPERTIES(Slog PROPERTIES CLEAN_DIRECT_OUTPUT 1)
install(TARGETS Slog Slog_static LIBRARY DESTINATION ${PROJECT_SOURCE_DIR}/lib ARCHIVE DESTINATION ${PROJECT_SOURCE_DIR}/lib)
install(FILES Slog.h DESTINATION ${PROJECT_SOURCE_DIR}/includes)